# llm-trainer

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  blog_post_hf.md  pyproject.toml  requirements.txt  setup.py
configs/: cpu_medium_model.yaml  cpu_small_model.yaml  custom_tokenizer_mistral.yaml  finetune_example.yaml  medium_model.yaml  small_model.yaml
docs/: api.md  architecture.md  cpu_training.md  fused_layers.md  getting_started.md  hf_tokenizer.md  safetensors.md  tokenizer.md  training.md
examples/: beginner_tokenizer_examples.py  complete_pipeline.py  complete_trainer_ecosystem_example.py  custom_tokenizer_example.py  enhanced_training.py  generation_example.py  safetensors_example.py  simple_custom_tokenizer_demo.py  train_small_model.py  trl_style_training.py  trl_style_training_example.py
notebooks/generation/: text_generation_guide.ipynb
notebooks/tokenizers/: all_tokenizers_demo.ipynb  bpe_tokenizer_deep_dive.ipynb  tokenizer_basics.ipynb  tokenizer_comparison.ipynb
notebooks/training/: train_classification_model.ipynb  train_small_language_model.ipynb
scripts/: evaluate.py  finetune.py  generate.py  train.py
src/llm_trainer/: __init__.py
src/llm_trainer/config/: __init__.py  data_config.py  model_config.py  tokenizer_config.py  training_config.py
src/llm_trainer/data/: __init__.py  dataloader.py  dataset.py  preprocessing.py
src/llm_trainer/finetune/: __init__.py  configs.py  dataset_utils.py  export_utils.py  factory.py  fast_language_model.py  trainers.py  utils.py
src/llm_trainer/finetune/trainers/: README.md  __init__.py  base_trainer.py  bco_config.py  bco_trainer.py  callbacks.py  cpo_config.py  cpo_trainer.py  dpo_config.py  dpo_trainer.py  grpo_config.py  grpo_trainer.py  judges.py  kto_config.py  kto_trainer.py  nash_md_config.py  nash_md_trainer.py  online_dpo_config.py  online_dpo_trainer.py  orpo_config.py  orpo_trainer.py  ppo_config.py  ppo_trainer.py  prm_config.py  prm_trainer.py  reward_config.py  reward_trainer.py  rloo_config.py  rloo_trainer.py  sft_config.py  sft_trainer.py  utils.py  xpo_config.py  xpo_trainer.py
src/llm_trainer/kernels/: __init__.py  fused_ops.py  memory_efficient.py
src/llm_trainer/models/: __init__.py  attention.py  base_model.py  embeddings.py  layers.py  safetensors_utils.py  transformer.py
src/llm_trainer/patching/: __init__.py  patch_transformers.py  patch_trl.py
src/llm_trainer/tokenizer/: __init__.py  base_tokenizer.py  bpe_tokenizer.py  byte_bpe_tokenizer.py  char_tokenizer.py  custom_tokenizer.py  factory.py  hf_tokenizer.py  sentencepiece_tokenizer.py  simple_tokenizer.py  wordpiece_tokenizer.py
src/llm_trainer/training/: __init__.py  optimizer.py  scheduler.py  trainer.py  utils.py
src/llm_trainer/utils/: __init__.py  generation.py  inference.py  metrics.py  tokenizer_factory.py
tests/: test_training_config.py
